--- a/locale/en/LC_MESSAGES/messages.po
+++ b/locale/en/LC_MESSAGES/messages.po
@@ -1,10 +1,11 @@
 msgid "Please provide the Discord bot token\nYou can find the instructions in the README.md and by pressing '2'.\n\n1. Enter bot token\n2. Instructions\n3. Edit EULA\n0. Exit"
-msgctxt "Please provide the Discord bot token\nYou can find the instructions in the README.md and by pressing '2'.\n\n1. Enter bot token\n2. Instructions\n3. Edit EULA\n0. Exit"
+msgstr "Please provide the Discord bot token\nYou can find the instructions in the README.md and by pressing '2'.\n\n1. Enter bot token\n2. Instructions\n3. Edit EULA\n0. Exit"
 
 msgid "Enter bot token: (HIDDEN)"
-msgctxt "Enter bot token: (HIDDEN)"
+msgstr "Enter bot token: (HIDDEN)"
 
-msgid "Select language | Выберите язык\n\n1. English\n2. Русский\n0. Exit | Выход"
-msgctxt "Select language | Выберите язык\n\n1. English\n2. Русский\n0. Exit | Выход"
+msgid "Please provide the Discord bot token\nYou can find the instructions in the README.md and by pressing \"2\".\n\n1. Enter bot token\n2. Instructions\n3. Edit EULA\n0. Exit"
+msgstr "Please provide the Discord bot token\nYou can find the instructions in the README.md and by pressing \"2\".\n\n1. Enter bot token\n2. Instructions\n3. Edit EULA\n0. Exit"
 
-msgid "Edit EULA"
+msgid
+msgstr
